--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "devDependencies": {
-    "foundation": "~5.5.3"
+    "foundation": "~5.5.3",
+    "angular": "~1.4.8"
   }
 }
