--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   ],
   "devDependencies": {
     "foundation": "~5.5.3",
-    "angular": "~1.4.8"
+    "angular": "~1.4.8",
+    "angular-ui-router": "~0.2.15",
+    "angular-animate": "~1.4.8"
   }
 }
