--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "foundation": "~5.5.3",
     "angular": "~1.4.8",
     "angular-ui-router": "~0.2.15",
-    "angular-animate": "~1.4.8"
+    "angular-animate": "~1.4.8",
+    "tether": "~1.1.1"
   }
 }
